fix bug with header button mobile onclick

--- a/style.css
+++ b/style.css
@@ -212,6 +212,8 @@ button {
     align-items: center;
     flex-direction: column;
     z-index: 2;
+    width: 70px;
+    height: auto;
 }
 #menu-mobile-button:hover {
     cursor: pointer;
